# doosan-forcevla-data-tools

./: .gitignore  README.md  common_commands.txt  opencode_new1.txt  opencode_report.txt  pyproject.toml
configs/: doosan_v0.yaml
configs/raw_recorder/: cameras.example.yaml  episode_metadata_defaults.example.yaml  robot_sources.example.yaml  topic_map.example.yaml  unit_frame_conventions.example.yaml
docs/: lab_workstation_validation_checklist.md  lerobot_export_plan.md  raw_recorder_schema_plan.md  real_lerobot_schema_decision.md  real_lerobot_writer_design.md
src/doosan_forcevla_data/convert/: action_chunks.py  compute_actions.py  plan_lerobot_export.py  raw_real_to_processed.py  raw_to_processed.py  stage_lerobot_export.py  (+4 more)
tests/: test_action_chunks.py  test_check_export_dependencies.py  test_compute_actions.py  test_dummy_raw_episode.py  test_inspect_processed_episode.py  test_inspect_raw_real_episode.py  test_plan_lerobot_export.py  test_preflight_real_export.py  test_raw_real_to_processed.py  test_raw_recorder_metadata_defaults.py  test_raw_to_processed.py  test_smoke_forcevla_multi_episode.py  test_smoke_forcevla_observation_builder.py  test_smoke_forcevla_tokenization_input.py  test_smoke_forcevla_transform_input.py  test_stage_lerobot_export.py  test_strict_lab_provenance_readiness.py  test_synthetic_raw_real_end_to_end_smoke.py  test_synthetic_raw_real_episode.py  test_validate_raw_real_episode.py  test_write_lerobot_dataset_skeleton.py  test_write_lerobot_skeleton.py  test_write_real_lerobot_dataset_export.py  test_write_real_lerobot_export.py
(+22 files in other folders)
