[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "doosan-forcevla-data-tools"
version = "0.0.1"
description = "Dataset tooling foundation for Doosan M1013 ForceVLA-style peg-in-hole data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
